# FY8904

./: .gitignore
Assignment 01/: analyze_cpp_results.py  image.csv  latticemaker.py  profile.txt  sites.py  squareLattice.csv  task2.1.py  task2.2.py  task2.3.py  task3.1.py  task3_oop.py  task3_oop_statistics.py  task3_profiling.py
Assignment 01/cpp_bond_percolation/: CMakeLists.txt
Assignment 01/cpp_bond_percolation/src/: lattices.hpp  logbinom.cpp  logbinom.hpp  main.cpp  main_old.cpp  results.cpp  results.hpp  sites.cpp  sites.hpp
Assignment 01/report/: main.cpp  q.tex  report.aux  report.fls  report.out  report.tex
Assignment 02/: task2.py  task2_10.py  task2_10_2col.py  task2_10_smallerfigs.py  task2_11.py  task2_11_1d.py  task2_6.py  task2_6_larger_domain.py  task2_6_short.py  task2_6_short_alidoust.py  task3_animation.py  task3_crank_nicholson.py  task3_part1.py  task3_part1_2col.py  task3_part2.py  task3_part3.py  task3_part4.py  task3_part4_stability.py  task3_part5_crank.py  task3_part5_crank_2col.py  task3_part5_crank_initials.py  task3_part5_crank_stability.py  task4_1.py  task4_1_2col.py  task4_2.py  test_animation.py  test_rasterization.py
Assignment 02/final_scripts/: task2_11_2col.py  task2_2col.py  task3_part2_2col.py  task3_part3_2col.py  task3_part4_stability_2col.py
Assignment 02/report/: bibliography.bib  commath2.sty  report.aux  report.bbl  report.bcf  report.out  report.tex  results.tex  theory.tex
Assignment 02/report_2col/: report.aux  report.blg  report.dvi  report.fdb_latexmk  report.tex  results.tex  theory.tex
Assignment 03/: find_anomaly_angles.py  make_fig1.py  make_fig2.py  make_fig3.py  make_fig4.py  plot_fig1.py  plot_fig2.py  plot_fig3.py  plot_fig4.py  simulate.py  simulator.py  surface.py  task2_conservation.py  task2_conservation_plot.py  task4.py  task4_plot_energy.py  task4_plot_m0.py  task4_plotting.py  task4_plotting_v2.py  task4_single.py  test.py  test_negative_vector.py  test_simulator.py  test_surface_profiles.py
Assignment 03/report/: bibliography.bib  report.tex  results.tex  theory.tex
